hpa/hpa-service-ingress-notes.yml
apiVersion: v1
kind: Service
metadata:
  name: hpa-notes-service
  namespace: hpa-testing
spec:
  type: NodePort
  ports:
  - nodePort: 30154
    port: 111
    targetPort: 80
    port: 112
    targetPort: 80
    protocol: TCP
  selector:
    app: notes-deployment-hpa

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hpa-notes-ingress
  namespace: hpa-testing
spec:
  rules:
  - host: www.prashanthgnotes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hpa-notes-service
            port:
              number: 111
              number: 112
  ingressClassName: nginx
